--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, restructuredTests ]
   pull_request:
     branches: [ master ]
 
@@ -35,4 +35,5 @@ jobs:
     - name: Test with pytest
       run: |
         cd Python/Tests
-        pytest test_Networking.py 
+        pytest
+
