--- a/.github/workflows/generate_toc.yml
+++ b/.github/workflows/generate_toc.yml
@@ -2,7 +2,7 @@ name: Generate TOC
 
 on:
   push:
-    branches: [master restructuredTests]
+    branches: [master, restructuredTests]
     paths: ['README.md']
 
 jobs:
