--- a/.github/workflows/generate_toc.yml
+++ b/.github/workflows/generate_toc.yml
@@ -6,15 +6,19 @@ on:
     paths: ['README.md']
 
 jobs:
-  build:
+
+  md_toc:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v2
+        with:
+          repository: ${{github.repository}}
       - run: |
+          ls
           curl https://raw.githubusercontent.com/ekalinin/github-markdown-toc/master/gh-md-toc -o gh-md-toc
           chmod a+x gh-md-toc
-          ./gh-md-toc --insert --no-backup README.md
+          ./gh-md-toc --insert --no-backup *.md
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Auto update markdown TOC
