--- a/.github/workflows/compile_arduino.yml
+++ b/.github/workflows/compile_arduino.yml
@@ -18,6 +18,8 @@ jobs:
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
         ls
         ./bin/arduino-cli config init --config-file Embedded/arduino-cli.yaml
+        echo "confshow"
+        cat /home/runner/.arduino15/arduino-cli.yaml
         ./bin/arduino-cli core update-index
         cd Embedded
         sudo mkdir MyAussenlicht
