--- a/.github/workflows/compile_arduino.yml
+++ b/.github/workflows/compile_arduino.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
         ls
-        ./bin/arduino-cli config init --config-file Embedded/arduino-cli.yaml
+        ./bin/arduino-cli config init --config-file Embedded/arduino-cli.yaml --overwrite
         echo "confshow"
         sudo cp Embedded/arduino-cli.yaml /home/runner/.arduino15/arduino-cli.yaml
         cat /home/runner/.arduino15/arduino-cli.yaml
