--- a/.github/workflows/compile_arduino.yml
+++ b/.github/workflows/compile_arduino.yml
@@ -2,30 +2,32 @@ name: Compile Firmware with Arduino CLI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Arduino CLI
-      run: |
-        curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-        ls
-        ./bin/arduino-cli config init --config-file Embedded/arduino-cli.yaml --overwrite
-        echo "confshow"
-        sudo cp Embedded/arduino-cli.yaml /home/runner/.arduino15/arduino-cli.yaml
-        cat /home/runner/.arduino15/arduino-cli.yaml
-        ./bin/arduino-cli core update-index
-        cd Embedded
-        sudo mkdir MyAussenlicht
-        sudo mv MyAussenlicht.ino ./MyAussenlicht/MyAussenlicht.ino
-        ../bin/arduino-cli core install esp8266:esp8266
-        ../bin/arduino-cli compile --fqbn esp8266:esp8266:d1_mini MyAussenlicht
+      - uses: actions/checkout@v2
 
+      - name: Set up Arduino CLI
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
+          ls
+          ./bin/arduino-cli config init --config-file Embedded/arduino-cli.yaml --overwrite
+          ./bin/arduino-cli config add board_manager.additional_urls https://arduino.esp8266.com/stable/package_esp8266com_index.json \
+             --config-file Embedded/arduino-cli.yaml
 
+          echo "confshow"
+          cat Embedded/arduino-cli.yaml
+          sudo cp Embedded/arduino-cli.yaml /home/runner/.arduino15/arduino-cli.yaml
+          cat /home/runner/.arduino15/arduino-cli.yaml
+          ./bin/arduino-cli core update-index
+          cd Embedded
+          sudo mkdir MyAussenlicht
+          sudo mv MyAussenlicht.ino MyAussenlicht/MyAussenlicht.ino
+          ../bin/arduino-cli core install esp8266:esp8266
+          ../bin/arduino-cli compile --fqbn esp8266:esp8266:d1_mini MyAussenlicht
