--- a/.github/workflows/compile_arduino.yml
+++ b/.github/workflows/compile_arduino.yml
@@ -26,7 +26,7 @@ jobs:
           sudo mkdir -p MyAussenlicht/build
           sudo mv MyAussenlicht.ino MyAussenlicht/MyAussenlicht.ino
           ../bin/arduino-cli core install esp8266:esp8266
-          ../bin/arduino-cli compile \
+          sudo ../bin/arduino-cli compile \
             --fqbn esp8266:esp8266:d1_mini \
             --build-path MyAussenlicht/build \
             MyAussenlicht
